Name:                yesod-js
Version:             0.0.0
Synopsis:            Higher-level interaction between Yesod and Javascript
Description:         This is an experimental package for testing out ideas.
Homepage:            http://www.yesodweb.com/
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules:     Yesod.Javascript
  Build-depends:       base               >= 4          && < 5
                     , yesod-core         >= 1.0        && < 1.1
                     , yesod-form         >= 1.0        && < 1.1
                     , shakespeare-js     >= 1.0        && < 1.1
                     , transformers       >= 0.2        && < 0.4
                     , text
                     , containers

Executable fullname
  Main-is:             fullname.hs
  hs-source-dirs:      samples
  Build-depends:       base               >= 4          && < 5
                     , warp               >= 1.2        && < 1.3
                     , yesod-core
                     , yesod-form
                     , yesod-js

source-repository head
  type:     git
  location: https://github.com/snoyberg/yesod-js
