name:              angular-js
version:           0.0.1
cabal-version:     >= 1.16
build-type:        Simple

executable yesod-angular
    main-is:           angular.hs
    ghc-options: -threaded -Wall
    default-language: Haskell2010
    build-depends: aeson            >= 0.6    && < 0.8
                 , base             == 4.*
                 , containers       == 0.5.*
                 , shakespeare      == 2.*
                 , text             >= 0.11   && < 2.0
                 , template-haskell
                 , transformers
                 , vector           == 0.10.*
                 , yesod            >= 1.2.5  && < 1.3
                 , yesod-core       >= 1.2.12 && < 1.3
                 , yesod-auth       >= 1.3    && < 1.4
                 , yesod-static     >= 1.2    && < 1.3
